--- a/css/main.css
+++ b/css/main.css
@@ -188,8 +188,8 @@ header{
 .section3{
   background-color: rgb(49, 206, 10);
   height: 100vh;
-
 }
+/* uu */
 .title{
   /* max-width: 700px; */
   text-align: center;
