--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,12 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+  color: #fff;
+
+}
+body{
+  background-color: rgba(54, 49, 49, 0.73)!important;
+  z-index: 5;
 
 }
 a{
@@ -16,7 +22,8 @@ a{
 
 header{
   /* position: fixed; */
-  position: fixed;
+  /* position: fixed; */
+  position: sticky;
   top: 0;
 
   background-color: #574495;
@@ -53,6 +60,17 @@ header{
 }
 .menu_icon{
   display: none;
+}
+.page{
+  background-image: url(../img/main.png);
+  height: 100%;
+  max-width: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #574495;
+
 }
 
 
@@ -157,17 +175,7 @@ header{
   }
 }
 
-.page{
-  background-image: url(../img/main.png);
-  height: 100%;
-  max-width: 100%;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  /* margin: 80px 0 0 0 ; */
-  /* padding-top: 80px; */
-}
+/* main */
 
 /* main */
 .page_section{
@@ -175,13 +183,15 @@ header{
   max-width: 1200px;
   /* height: 100vh; */
   margin: 0 auto;
+  padding: 120px 0 0 0;
 
 
 }
 
 .section2{
   background-color:rgb(219, 154, 12) ;
-  height: 100vh;
+  /* height: 100vh; */
+  /* display: flex; */
 
   /* margin-top: 80px; */
 }
@@ -191,7 +201,9 @@ header{
 }
 /* uu */
 .title{
+  padding: 20px;
   /* max-width: 700px; */
+  /* min-width: 420px; */
   text-align: center;
   font-size: 36px;
   /* max-width: 100vw; */
@@ -200,7 +212,7 @@ header{
   margin: 0px auto;
   text-transform: uppercase;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   height: 100vh;
 
 }
@@ -209,7 +221,7 @@ header{
   -webkit-text-stroke-width: 0px;
 
 }
-.title h1{
+.title p{
  
   font-size: 70px;
   font-weight: 800;
@@ -217,15 +229,113 @@ header{
   color: purple;
   -webkit-text-stroke-color: white;
   -webkit-text-stroke-width: 1px;
-  margin: 80px 0 85px 0 ;
+  margin: 0 0 85px 0 ;
 }
 .title  h3{
   color: #fff;
 }
-@media(max-width: 500px){
-  .title h1, h3{
+@media(max-width: 468px){
+  .title{
+    max-width: 420px;
+  }
+  .title p, h3{
     margin: 17px 0 57px 0 ;
     font-size: 24px;
   }
 
+}
+/* modal */
+.modal{
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: #313135b3;
+  z-index: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+
+
+}
+.modal_container{
+  width: 330px;
+  height: 250px;
+  background-color: #574495;
+  padding: 12px;
+  box-shadow: 0px 0px 46px -1px rgba(0, 0, 0, 0.94);
+}
+.btn_close{
+  text-align: right;
+  cursor: pointer;
+}
+.container{
+  /* border: solid 2px black; */
+  padding: 10px;
+  text-align: center;
+  margin-top: 4px;
+  
+}
+.container p{
+  margin-bottom: 10px;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.container input{
+  width: 100%;
+  height: 30px;
+  margin-bottom: 10px;
+  padding: 8px;
+}
+.btnEnter{
+  width: 100%;
+  height: 30px;
+  background-color: #574495;
+  border: solid 1px #fff;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+
+
+}
+.open_modal{
+  display: block;
+
+
+}
+.close_modal{
+  display: none;
+
+}
+.activ_side{
+  background-color: rgba(54, 49, 49, 0.73);
+
+}
+.section2_item{
+  width: 50%;
+  height: 320px;
+  background-image: url(../img/for\ new\ pokolenie.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.section_h{
+  display: flex;
+  /* padding: 150px 0 0 0; */
+}
+.h_text{
+  width: 50%;
+  text-align: center;
+  /* height: 300px; */
+}
+.h_text p{
+  margin: 0 0 33px 0;
+  font-size: 22px;
+}
+.img_after_twwa{
+  width: 80%;
+  margin-left: 10%;
 }
